@@ -6,9 +6,13 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.awaitility.Awaitility.await;
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.post;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.time.ZoneId;
+import java.time.ZonedDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
 import java.util.stream.Collectors;
@@ -18,13 +22,17 @@ import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
 import org.springframework.security.test.context.support.WithMockUser;
 import org.springframework.util.LinkedMultiValueMap;
+
+import com.fasterxml.jackson.databind.ObjectMapper;
 
 import de.tum.in.www1.artemis.domain.*;
 import de.tum.in.www1.artemis.domain.enumeration.AssessmentType;
 import de.tum.in.www1.artemis.domain.enumeration.DiagramType;
 import de.tum.in.www1.artemis.domain.enumeration.IncludedInOverallScore;
+import de.tum.in.www1.artemis.domain.enumeration.ProgrammingLanguage;
 import de.tum.in.www1.artemis.domain.exam.Exam;
 import de.tum.in.www1.artemis.domain.exam.ExerciseGroup;
 import de.tum.in.www1.artemis.domain.exam.StudentExam;
@@ -45,7 +53,7 @@ import de.tum.in.www1.artemis.web.rest.dto.*;
 import de.tum.in.www1.artemis.web.rest.errors.AccessForbiddenException;
 import de.tum.in.www1.artemis.web.rest.errors.EntityNotFoundException;
 
-public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucketJiraTest {
+class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucketJiraTest {
 
     @Autowired
     private CourseRepository courseRepo;
@@ -107,6 +115,9 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
     @Autowired
     private ExamAccessService examAccessService;
 
+    @Autowired
+    private ObjectMapper objectMapper;
+
     private List<User> users;
 
     private Course course1;
@@ -126,7 +137,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
     private User instructor;
 
     @BeforeEach
-    public void initTestCase() {
+    void initTestCase() {
         users = database.addUsers(numberOfStudents, 5, 0, 1);
         course1 = database.addEmptyCourse();
         course2 = database.addEmptyCourse();
@@ -150,14 +161,14 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
     }
 
     @AfterEach
-    public void resetDatabase() {
+    void resetDatabase() {
         bitbucketRequestMockProvider.reset();
         database.resetDatabase();
     }
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testRegisterUserInExam_addedToCourseStudentsGroup() throws Exception {
+    void testRegisterUserInExam_addedToCourseStudentsGroup() throws Exception {
         User student42 = database.getUserByLogin("student42");
         jiraRequestMockProvider.enableMockingOfRequests();
         jiraRequestMockProvider.mockAddUserToGroup(course1.getStudentGroupName(), false);
@@ -173,20 +184,19 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testAddStudentToExam_testExam() throws Exception {
+    void testAddStudentToExam_testExam() throws Exception {
         request.postWithoutLocation("/api/courses/" + course1.getId() + "/exams/" + testExam1.getId() + "/students/student42", null, HttpStatus.FORBIDDEN, null);
     }
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testRemoveStudentToExam_testExam() throws Exception {
-
+    void testRemoveStudentToExam_testExam() throws Exception {
         request.delete("/api/courses/" + course1.getId() + "/exams/" + testExam1.getId() + "/students/student42", HttpStatus.FORBIDDEN);
     }
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testRegisterUsersInExam() throws Exception {
+    void testRegisterUsersInExam() throws Exception {
         jiraRequestMockProvider.enableMockingOfRequests();
 
         var exam = ModelFactory.generateExam(course1);
@@ -331,7 +341,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testAddStudentsToExam_testExam() throws Exception {
+    void testAddStudentsToExam_testExam() throws Exception {
         User student1 = database.getUserByLogin("student1");
         String registrationNumber1 = "1111111";
         student1.setRegistrationNumber(registrationNumber1);
@@ -344,14 +354,13 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testRemoveAllStudentsFromExam_testExam() throws Exception {
-
+    void testRemoveAllStudentsFromExam_testExam() throws Exception {
         request.delete("/api/courses/" + course1.getId() + "/exams/" + testExam1.getId() + "/students", HttpStatus.FORBIDDEN);
     }
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testStartExercisesWithTextExercise() throws Exception {
+    void testStartExercisesWithTextExercise() throws Exception {
 
         // TODO IMPORTANT test more complex exam configurations (mixed exercise type, more variants and more registered students)
 
@@ -411,7 +420,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testStartExercisesWithModelingExercise() throws Exception {
+    void testStartExercisesWithModelingExercise() throws Exception {
         // TODO IMPORTANT test more complex exam configurations (mixed exercise type, more variants and more registered students)
 
         // registering users
@@ -468,7 +477,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testGenerateStudentExams() throws Exception {
+    void testGenerateStudentExams() throws Exception {
         Exam exam = database.setupExamWithExerciseGroupsExercisesRegisteredStudents(course1);
 
         // invoke generate student exams
@@ -491,15 +500,14 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testGenerateStudentExams_testExam() throws Exception {
-
+    void testGenerateStudentExams_testExam() throws Exception {
         request.postListWithResponseBody("/api/courses/" + course1.getId() + "/exams/" + testExam1.getId() + "/generate-student-exams", Optional.empty(), StudentExam.class,
                 HttpStatus.FORBIDDEN);
     }
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testGenerateStudentExamsNoExerciseGroups_badRequest() throws Exception {
+    void testGenerateStudentExamsNoExerciseGroups_badRequest() throws Exception {
         Exam exam = database.addExamWithExerciseGroup(course1, true);
         exam.setStartDate(now());
         exam.setEndDate(now().plusHours(2));
@@ -512,7 +520,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testGenerateStudentExamsNoExerciseNumber_badRequest() throws Exception {
+    void testGenerateStudentExamsNoExerciseNumber_badRequest() throws Exception {
         Exam exam = database.setupExamWithExerciseGroupsExercisesRegisteredStudents(course1);
         exam.setNumberOfExercisesInExam(null);
         examRepository.save(exam);
@@ -524,7 +532,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testGenerateStudentExamsNotEnoughExerciseGroups_badRequest() throws Exception {
+    void testGenerateStudentExamsNotEnoughExerciseGroups_badRequest() throws Exception {
         Exam exam = database.setupExamWithExerciseGroupsExercisesRegisteredStudents(course1);
         exam.setNumberOfExercisesInExam(exam.getNumberOfExercisesInExam() + 2);
         examRepository.save(exam);
@@ -536,7 +544,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testGenerateStudentExamsTooManyMandatoryExerciseGroups_badRequest() throws Exception {
+    void testGenerateStudentExamsTooManyMandatoryExerciseGroups_badRequest() throws Exception {
         Exam exam = database.setupExamWithExerciseGroupsExercisesRegisteredStudents(course1);
         exam.setNumberOfExercisesInExam(exam.getNumberOfExercisesInExam() - 2);
         examRepository.save(exam);
@@ -548,7 +556,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testGenerateMissingStudentExams() throws Exception {
+    void testGenerateMissingStudentExams() throws Exception {
         Exam exam = database.setupExamWithExerciseGroupsExercisesRegisteredStudents(course1);
 
         // Generate student exams
@@ -584,22 +592,20 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testGenerateMissingStudentExams_testExam() throws Exception {
-
+    void testGenerateMissingStudentExams_testExam() throws Exception {
         request.postListWithResponseBody("/api/courses/" + course1.getId() + "/exams/" + testExam1.getId() + "/generate-missing-student-exams", Optional.empty(), StudentExam.class,
                 HttpStatus.FORBIDDEN);
     }
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testEvaluateQuizExercises_testExam() throws Exception {
-
+    void testEvaluateQuizExercises_testExam() throws Exception {
         request.post("/api/courses/" + course1.getId() + "/exams/" + testExam1.getId() + "/student-exams/evaluate-quiz-exercises", Optional.empty(), HttpStatus.FORBIDDEN);
     }
 
     @Test
     @WithMockUser(username = "admin", roles = "ADMIN")
-    public void testRemovingAllStudents() throws Exception {
+    void testRemovingAllStudents() throws Exception {
         Exam exam = database.setupExamWithExerciseGroupsExercisesRegisteredStudents(course1);
 
         // Generate student exams
@@ -649,7 +655,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "admin", roles = "ADMIN")
-    public void testRemovingAllStudentsAndParticipations() throws Exception {
+    void testRemovingAllStudentsAndParticipations() throws Exception {
         Exam exam = database.setupExamWithExerciseGroupsExercisesRegisteredStudents(course1);
 
         // Generate student exams
@@ -700,13 +706,13 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "admin", roles = "ADMIN")
-    public void testSaveExamWithExerciseGroupWithExerciseToDatabase() {
+    void testSaveExamWithExerciseGroupWithExerciseToDatabase() {
         database.addCourseExamExerciseGroupWithOneTextExercise();
     }
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testAll_asStudent() throws Exception {
+    void testAll_asStudent() throws Exception {
         this.testAllPreAuthorize();
         ModelFactory.generateExam(course1);
         request.getList("/api/courses/" + course1.getId() + "/exams", HttpStatus.FORBIDDEN, Exam.class);
@@ -714,7 +720,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "tutor1", roles = "TA")
-    public void testAll_asTutor() throws Exception {
+    void testAll_asTutor() throws Exception {
         this.testAllPreAuthorize();
     }
 
@@ -732,14 +738,14 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor6", roles = "INSTRUCTOR")
-    public void testCreateExam_checkCourseAccess_InstructorNotInCourse_forbidden() throws Exception {
+    void testCreateExam_checkCourseAccess_InstructorNotInCourse_forbidden() throws Exception {
         Exam exam = ModelFactory.generateExam(course1);
         request.post("/api/courses/" + course1.getId() + "/exams", exam, HttpStatus.FORBIDDEN);
     }
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testCreateExam_asInstructor() throws Exception {
+    void testCreateExam_asInstructor() throws Exception {
         // Test for bad request when exam id is already set.
         Exam examA = ModelFactory.generateExam(course1);
         examA.setId(55L);
@@ -790,7 +796,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testCreateTestExam_asInstructor() throws Exception {
+    void testCreateTestExam_asInstructor() throws Exception {
         // Test the creation of a test exam
         Exam examA = ModelFactory.generateTestExam(course1);
         request.post("/api/courses/" + course1.getId() + "/exams", examA, HttpStatus.CREATED);
@@ -800,7 +806,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testCreateTestExam_asInstructor_withVisibleDateEqualsStartDate() throws Exception {
+    void testCreateTestExam_asInstructor_withVisibleDateEqualsStartDate() throws Exception {
         // Test the creation of a test exam, where visibleDate equals StartDate
         Exam examB = ModelFactory.generateTestExam(course1);
         examB.setVisibleDate(examB.getStartDate());
@@ -811,7 +817,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testCreateTestExam_asInstructor_badReuestWithWorkingTimeGreatherThanWorkingWindow() throws Exception {
+    void testCreateTestExam_asInstructor_badReuestWithWorkingTimeGreatherThanWorkingWindow() throws Exception {
         // Test for bad request, where workingTime is greater than difference between StartDate and EndDate
         Exam examC = ModelFactory.generateTestExam(course1);
         examC.setWorkingTime(5000);
@@ -820,7 +826,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testCreateTestExam_asInstructor_badRequestWithWorkingTimeSetToZero() throws Exception {
+    void testCreateTestExam_asInstructor_badRequestWithWorkingTimeSetToZero() throws Exception {
         // Test for bad request, if the working time is 0
         Exam examD = ModelFactory.generateTestExam(course1);
         examD.setWorkingTime(0);
@@ -830,7 +836,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testCreateTestExam_asInstructor_testExam_CorrectionRoundViolation() throws Exception {
+    void testCreateTestExam_asInstructor_testExam_CorrectionRoundViolation() throws Exception {
         Exam exam = ModelFactory.generateTestExam(course1);
         exam.setNumberOfCorrectionRoundsInExam(1);
         request.post("/api/courses/" + course1.getId() + "/exams", exam, HttpStatus.BAD_REQUEST);
@@ -838,7 +844,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testCreateTestExam_asInstructor_realExam_CorrectionRoundViolation() throws Exception {
+    void testCreateTestExam_asInstructor_realExam_CorrectionRoundViolation() throws Exception {
         Exam exam = ModelFactory.generateExam(course1);
         exam.setNumberOfCorrectionRoundsInExam(0);
         request.post("/api/courses/" + course1.getId() + "/exams", exam, HttpStatus.BAD_REQUEST);
@@ -850,7 +856,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testUpdateTestExam_asInstructor_withExamModeChanged() throws Exception {
+    void testUpdateTestExam_asInstructor_withExamModeChanged() throws Exception {
         // The Exam-Mode should not be changeable with a PUT / update operation, a CONFLICT should be returned instead
         // Case 1: test exam should be updated to real exam
         Exam examA = ModelFactory.generateTestExam(course1);
@@ -872,7 +878,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testUpdateExam_asInstructor() throws Exception {
+    void testUpdateExam_asInstructor() throws Exception {
         // Create instead of update if no id was set
         Exam exam = ModelFactory.generateExam(course1);
         exam.setTitle("Over 9000!");
@@ -908,7 +914,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testUpdateExam_reschedule_visibleAndStartDateChanged() throws Exception {
+    void testUpdateExam_reschedule_visibleAndStartDateChanged() throws Exception {
         // Add a programming exercise to the exam and change the dates in order to invoke a rescheduling
         var programmingEx = database.addCourseExamExerciseGroupWithOneProgrammingExerciseAndTestCases();
         var examWithProgrammingEx = programmingEx.getExerciseGroup().getExam();
@@ -921,7 +927,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testUpdateExam_reschedule_visibleDateChanged() throws Exception {
+    void testUpdateExam_reschedule_visibleDateChanged() throws Exception {
         var programmingEx = database.addCourseExamExerciseGroupWithOneProgrammingExerciseAndTestCases();
         var examWithProgrammingEx = programmingEx.getExerciseGroup().getExam();
         examWithProgrammingEx.setVisibleDate(examWithProgrammingEx.getVisibleDate().plusSeconds(1));
@@ -931,7 +937,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testUpdateExam_reschedule_startDateChanged() throws Exception {
+    void testUpdateExam_reschedule_startDateChanged() throws Exception {
         var programmingEx = database.addCourseExamExerciseGroupWithOneProgrammingExerciseAndTestCases();
         var examWithProgrammingEx = programmingEx.getExerciseGroup().getExam();
         examWithProgrammingEx.setStartDate(examWithProgrammingEx.getStartDate().plusSeconds(1));
@@ -942,7 +948,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testUpdateExam_rescheduleModeling_endDateChanged() throws Exception {
+    void testUpdateExam_rescheduleModeling_endDateChanged() throws Exception {
         var modelingExercise = database.addCourseExamExerciseGroupWithOneModelingExercise();
         var examWithModelingEx = modelingExercise.getExerciseGroup().getExam();
         examWithModelingEx.setEndDate(examWithModelingEx.getEndDate().plusSeconds(2));
@@ -953,7 +959,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testUpdateExam_rescheduleModeling_workingTimeChanged() throws Exception {
+    void testUpdateExam_rescheduleModeling_workingTimeChanged() throws Exception {
         var modelingExercise = database.addCourseExamExerciseGroupWithOneModelingExercise();
         var examWithModelingEx = modelingExercise.getExerciseGroup().getExam();
         examWithModelingEx.setVisibleDate(now().plusHours(1));
@@ -970,7 +976,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testGetExam_asInstructor() throws Exception {
+    void testGetExam_asInstructor() throws Exception {
         assertThrows(EntityNotFoundException.class, () -> examRepository.findByIdElseThrow(Long.MAX_VALUE));
         assertThrows(EntityNotFoundException.class, () -> examRepository.findWithExerciseGroupsAndExercisesByIdOrElseThrow(Long.MAX_VALUE));
         assertThrows(EntityNotFoundException.class, () -> examRepository.findByIdWithRegisteredUsersExerciseGroupsAndExercisesElseThrow(Long.MAX_VALUE));
@@ -984,7 +990,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testGetExam_asInstructor_WithTestRunQuizExerciseSubmissions() throws Exception {
+    void testGetExam_asInstructor_WithTestRunQuizExerciseSubmissions() throws Exception {
         Course course = database.addEmptyCourse();
         Exam exam = database.addExamWithExerciseGroup(course, true);
         ExerciseGroup exerciseGroup = exam.getExerciseGroups().get(0);
@@ -1008,51 +1014,51 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testGetExamsForCourse_asInstructor() throws Exception {
+    void testGetExamsForCourse_asInstructor() throws Exception {
         request.getList("/api/courses/" + course1.getId() + "/exams", HttpStatus.OK, Exam.class);
         verify(examAccessService, times(1)).checkCourseAccessForTeachingAssistantElseThrow(course1.getId());
     }
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testGetExamsForUser_asInstructor() throws Exception {
+    void testGetExamsForUser_asInstructor() throws Exception {
         request.getList("/api/courses/" + course1.getId() + "/exams-for-user", HttpStatus.OK, Exam.class);
     }
 
     @Test
     @WithMockUser(username = "admin", roles = "ADMIN")
-    public void testGetCurrentAndUpcomingExams() throws Exception {
+    void testGetCurrentAndUpcomingExams() throws Exception {
         request.getList("/api/courses/upcoming-exams", HttpStatus.OK, Exam.class);
     }
 
     @Test
     @WithMockUser(username = "user", roles = "USER")
-    public void testGetCurrentAndUpcomingExamsForbiddenForUser() throws Exception {
+    void testGetCurrentAndUpcomingExamsForbiddenForUser() throws Exception {
         request.getList("/api/courses/upcoming-exams", HttpStatus.FORBIDDEN, Exam.class);
     }
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testGetCurrentAndUpcomingExamsForbiddenForInstructor() throws Exception {
+    void testGetCurrentAndUpcomingExamsForbiddenForInstructor() throws Exception {
         request.getList("/api/courses/upcoming-exams", HttpStatus.FORBIDDEN, Exam.class);
     }
 
     @Test
     @WithMockUser(username = "tutor1", roles = "TA")
-    public void testGetCurrentAndUpcomingExamsForbiddenForTutor() throws Exception {
+    void testGetCurrentAndUpcomingExamsForbiddenForTutor() throws Exception {
         request.getList("/api/courses/upcoming-exams", HttpStatus.FORBIDDEN, Exam.class);
     }
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testDeleteEmptyExam_asInstructor() throws Exception {
+    void testDeleteEmptyExam_asInstructor() throws Exception {
         request.delete("/api/courses/" + course1.getId() + "/exams/" + exam1.getId(), HttpStatus.OK);
         verify(examAccessService, times(1)).checkCourseAndExamAccessForInstructorElseThrow(course1.getId(), exam1.getId());
     }
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testDeleteExamWithExerciseGroupAndTextExercise_asInstructor() throws Exception {
+    void testDeleteExamWithExerciseGroupAndTextExercise_asInstructor() throws Exception {
         TextExercise textExercise = ModelFactory.generateTextExerciseForExam(exam2.getExerciseGroups().get(0));
         textExercise.setKnowledge(textAssessmentKnowledgeService.createNewKnowledge());
         exerciseRepo.save(textExercise);
@@ -1062,20 +1068,20 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "admin", roles = "ADMIN")
-    public void testDeleteExamThatDoesNotExist() throws Exception {
+    void testDeleteExamThatDoesNotExist() throws Exception {
         request.delete("/api/courses/" + course2.getId() + "/exams/654555", HttpStatus.NOT_FOUND);
     }
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testResetEmptyExam_asInstructor() throws Exception {
+    void testResetEmptyExam_asInstructor() throws Exception {
         request.delete("/api/courses/" + course1.getId() + "/exams/" + exam1.getId() + "/reset", HttpStatus.OK);
         verify(examAccessService, times(1)).checkCourseAndExamAccessForInstructorElseThrow(course1.getId(), exam1.getId());
     }
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testResetExamWithExerciseGroupAndTextExercise_asInstructor() throws Exception {
+    void testResetExamWithExerciseGroupAndTextExercise_asInstructor() throws Exception {
         TextExercise textExercise = ModelFactory.generateTextExerciseForExam(exam2.getExerciseGroups().get(0));
         exerciseRepo.save(textExercise);
         request.delete("/api/courses/" + course1.getId() + "/exams/" + exam2.getId() + "/reset", HttpStatus.OK);
@@ -1084,13 +1090,13 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "admin", roles = "ADMIN")
-    public void testResetExamThatDoesNotExist() throws Exception {
+    void testResetExamThatDoesNotExist() throws Exception {
         request.delete("/api/courses/" + course2.getId() + "/exams/654555/reset", HttpStatus.NOT_FOUND);
     }
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testDeleteStudent() throws Exception {
+    void testDeleteStudent() throws Exception {
         // Create an exam with registered students
         Exam exam = database.setupExamWithExerciseGroupsExercisesRegisteredStudents(course1);
         var student1 = database.getUserByLogin("student1");
@@ -1151,7 +1157,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testGetExamWithOptions() throws Exception {
+    void testGetExamWithOptions() throws Exception {
         User user = userRepo.findOneByLogin("student1").get();
         Course course = database.createCourseWithExamAndExerciseGroupAndExercises(user, now().minusHours(3), now().minusHours(2), now().minusHours(1));
         var exam = examRepository.findWithExerciseGroupsAndExercisesById(course.getExams().iterator().next().getId()).get();
@@ -1193,7 +1199,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testDeleteStudentWithParticipationsAndSubmissions() throws Exception {
+    void testDeleteStudentWithParticipationsAndSubmissions() throws Exception {
         // Create an exam with registered students
         Exam exam = database.setupExamWithExerciseGroupsExercisesRegisteredStudents(course1);
         var student1 = database.getUserByLogin("student1");
@@ -1246,19 +1252,19 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "tutor1", roles = "TA")
-    public void testGetExamForTestRunDashboard_forbidden() throws Exception {
+    void testGetExamForTestRunDashboard_forbidden() throws Exception {
         request.get("/api/courses/" + course1.getId() + "/exams/" + exam1.getId() + "/exam-for-test-run-assessment-dashboard", HttpStatus.FORBIDDEN, Exam.class);
     }
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testGetExamForTestRunDashboard_badRequest() throws Exception {
+    void testGetExamForTestRunDashboard_badRequest() throws Exception {
         request.get("/api/courses/" + course2.getId() + "/exams/" + exam1.getId() + "/exam-for-test-run-assessment-dashboard", HttpStatus.BAD_REQUEST, Exam.class);
     }
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testDeleteExamWithOneTestRun() throws Exception {
+    void testDeleteExamWithOneTestRun() throws Exception {
         var instructor = database.getUserByLogin("instructor1");
         var exam = database.addExam(course1);
         exam = database.addTextModelingProgrammingExercisesToExam(exam, false, false);
@@ -1268,25 +1274,25 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testGetExamForTestRunDashboard_ok() throws Exception {
+    void testGetExamForTestRunDashboard_ok() throws Exception {
         var instructor = database.getUserByLogin("instructor1");
         var exam = database.addExam(course1);
         exam = database.addTextModelingProgrammingExercisesToExam(exam, false, false);
         database.setupTestRunForExamWithExerciseGroupsForInstructor(exam, instructor, exam.getExerciseGroups());
         exam = request.get("/api/courses/" + exam.getCourse().getId() + "/exams/" + exam.getId() + "/exam-for-test-run-assessment-dashboard", HttpStatus.OK, Exam.class);
-        assertThat(exam.getExerciseGroups().stream().flatMap(exerciseGroup -> exerciseGroup.getExercises().stream()).collect(Collectors.toList())).isNotEmpty();
+        assertThat(exam.getExerciseGroups().stream().flatMap(exerciseGroup -> exerciseGroup.getExercises().stream()).toList()).isNotEmpty();
     }
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testDeleteStudentThatDoesNotExist() throws Exception {
+    void testDeleteStudentThatDoesNotExist() throws Exception {
         Exam exam = database.setupExamWithExerciseGroupsExercisesRegisteredStudents(course1);
         request.delete("/api/courses/" + course1.getId() + "/exams/" + exam.getId() + "/students/nonExistingStudent", HttpStatus.NOT_FOUND);
     }
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testGetStudentExamForStart() throws Exception {
+    void testGetStudentExamForStart() throws Exception {
         Exam exam = database.addActiveExamWithRegisteredUser(course1, users.get(0));
         StudentExam response = request.get("/api/courses/" + course1.getId() + "/exams/" + exam.getId() + "/start", HttpStatus.OK, StudentExam.class);
         assertThat(response.getExam()).isEqualTo(exam);
@@ -1295,7 +1301,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testAddAllRegisteredUsersToExam() throws Exception {
+    void testAddAllRegisteredUsersToExam() throws Exception {
         Course course = database.addEmptyCourse();
         Exam exam = database.addExam(course);
         exam = database.addExerciseGroupsAndExercisesToExam(exam, false);
@@ -1328,13 +1334,13 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testRegisterCourseStudents_testExam() throws Exception {
+    void testRegisterCourseStudents_testExam() throws Exception {
         request.postWithoutLocation("/api/courses/" + course1.getId() + "/exams/" + testExam1.getId() + "/register-course-students", null, HttpStatus.FORBIDDEN, null);
     }
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testUpdateOrderOfExerciseGroups() throws Exception {
+    void testUpdateOrderOfExerciseGroups() throws Exception {
         ExerciseGroup exerciseGroup1 = new ExerciseGroup();
         exerciseGroup1.setTitle("first");
         ExerciseGroup exerciseGroup2 = new ExerciseGroup();
@@ -1417,7 +1423,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void lockAllRepositories_noInstructor() throws Exception {
+    void lockAllRepositories_noInstructor() throws Exception {
         ExerciseGroup exerciseGroup1 = new ExerciseGroup();
 
         Exam exam = database.addExam(course1);
@@ -1430,7 +1436,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void lockAllRepositories() throws Exception {
+    void lockAllRepositories() throws Exception {
         ExerciseGroup exerciseGroup1 = new ExerciseGroup();
 
         Exam exam = database.addExam(course1);
@@ -1461,7 +1467,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void unlockAllRepositories_preAuthNoInstructor() throws Exception {
+    void unlockAllRepositories_preAuthNoInstructor() throws Exception {
         ExerciseGroup exerciseGroup1 = new ExerciseGroup();
 
         Exam exam = database.addExam(course1);
@@ -1474,7 +1480,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void unlockAllRepositories() throws Exception {
+    void unlockAllRepositories() throws Exception {
         bitbucketRequestMockProvider.enableMockingOfRequests(true);
         assertThat(studentExamRepository.findStudentExam(new ProgrammingExercise(), null)).isEmpty();
 
@@ -1532,7 +1538,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "tutor1", roles = "TA")
-    public void testGetExamForExamAssessmentDashboard() throws Exception {
+    void testGetExamForExamAssessmentDashboard() throws Exception {
         User user = userRepo.findOneByLogin("student1").get();
         // we need an exam from the past, otherwise the tutor won't have access
         Course course = database.createCourseWithExamAndExerciseGroupAndExercises(user, now().minusHours(3), now().minusHours(2), now().minusHours(1));
@@ -1547,7 +1553,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "tutor1", roles = "TA")
-    public void testGetExamForExamAssessmentDashboard_beforeDueDate() throws Exception {
+    void testGetExamForExamAssessmentDashboard_beforeDueDate() throws Exception {
         User user = userRepo.findOneByLogin("student1").get();
         Course course = database.createCourseWithExamAndExerciseGroupAndExercises(user);
         Exam exam = course.getExams().iterator().next();
@@ -1560,7 +1566,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "student1", roles = "STUDENT")
-    public void testGetExamForExamAssessmentDashboard_asStudent_forbidden() throws Exception {
+    void testGetExamForExamAssessmentDashboard_asStudent_forbidden() throws Exception {
         User user = userRepo.findOneByLogin("student1").get();
         Course course = database.createCourseWithExamAndExerciseGroupAndExercises(user);
         request.get("/api/courses/" + course.getId() + "/exams/" + course.getExams().iterator().next().getId() + "/exam-for-assessment-dashboard", HttpStatus.FORBIDDEN,
@@ -1569,19 +1575,19 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testGetExamForExamAssessmentDashboard_courseIdDoesNotMatch_badRequest() throws Exception {
+    void testGetExamForExamAssessmentDashboard_courseIdDoesNotMatch_badRequest() throws Exception {
         request.get("/api/courses/" + course2.getId() + "/exams/" + exam1.getId() + "/exam-for-assessment-dashboard", HttpStatus.BAD_REQUEST, Course.class);
     }
 
     @Test
     @WithMockUser(username = "tutor1", roles = "TA")
-    public void testGetExamForExamAssessmentDashboard_notFound() throws Exception {
+    void testGetExamForExamAssessmentDashboard_notFound() throws Exception {
         request.get("/api/courses/1/exams/1/exam-for-assessment-dashboard", HttpStatus.NOT_FOUND, Course.class);
     }
 
     @Test
     @WithMockUser(username = "tutor6", roles = "TA")
-    public void testGetExamForExamDashboard_NotTAOfCourse_forbidden() throws Exception {
+    void testGetExamForExamDashboard_NotTAOfCourse_forbidden() throws Exception {
         User user = userRepo.findOneByLogin("student1").get();
         Course course = database.createCourseWithExamAndExerciseGroupAndExercises(user);
         Exam exam = course.getExams().iterator().next();
@@ -1594,19 +1600,19 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "tutor6", roles = "TA")
-    public void testGetExamScore_tutorNotInCourse_forbidden() throws Exception {
+    void testGetExamScore_tutorNotInCourse_forbidden() throws Exception {
         request.get("/api/courses/" + course1.getId() + "/exams/" + exam1.getId() + "/scores", HttpStatus.FORBIDDEN, ExamScoresDTO.class);
     }
 
     @Test
     @WithMockUser(username = "tutor1", roles = "TA")
-    public void testGetExamScore_tutor_forbidden() throws Exception {
+    void testGetExamScore_tutor_forbidden() throws Exception {
         request.get("/api/courses/" + course1.getId() + "/exams/" + exam1.getId() + "/scores", HttpStatus.FORBIDDEN, ExamScoresDTO.class);
     }
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testGetExamScore() throws Exception {
+    void testGetExamScore() throws Exception {
 
         // TODO avoid duplicated code with StudentExamIntegrationTest
 
@@ -1756,9 +1762,9 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
         assertThat(response.examId).isEqualTo(exam.getId());
 
         // Ensure that all exerciseGroups of the exam are present in the DTO
-        List<Long> exerciseGroupIdsInDTO = response.exerciseGroups.stream().map(exerciseGroup -> exerciseGroup.id).collect(Collectors.toList());
-        List<Long> exerciseGroupIdsInExam = exam.getExerciseGroups().stream().map(ExerciseGroup::getId).collect(Collectors.toList());
-        assertThat(exerciseGroupIdsInExam).containsExactlyInAnyOrderElementsOf(exerciseGroupIdsInDTO);
+        Set<Long> exerciseGroupIdsInDTO = response.exerciseGroups.stream().map(exerciseGroup -> exerciseGroup.id).collect(Collectors.toSet());
+        Set<Long> exerciseGroupIdsInExam = exam.getExerciseGroups().stream().map(ExerciseGroup::getId).collect(Collectors.toSet());
+        assertThat(exerciseGroupIdsInExam).isEqualTo(exerciseGroupIdsInDTO);
 
         // Compare exerciseGroups in DTO to exam exerciseGroups
         // Tolerated absolute difference for floating-point number comparisons
@@ -1790,9 +1796,9 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
         }
 
         // Ensure that all registered students have a StudentResult
-        List<Long> studentIdsWithStudentResults = response.studentResults.stream().map(studentResult -> studentResult.userId).collect(Collectors.toList());
-        List<Long> registeredUsersIds = exam.getRegisteredUsers().stream().map(DomainObject::getId).collect(Collectors.toList());
-        assertThat(studentIdsWithStudentResults).containsExactlyInAnyOrderElementsOf(registeredUsersIds);
+        Set<Long> studentIdsWithStudentResults = response.studentResults.stream().map(studentResult -> studentResult.userId).collect(Collectors.toSet());
+        Set<Long> registeredUsersIds = exam.getRegisteredUsers().stream().map(DomainObject::getId).collect(Collectors.toSet());
+        assertThat(studentIdsWithStudentResults).isEqualTo(registeredUsersIds);
 
         // Compare StudentResult with the generated results
         for (var studentResult : response.studentResults) {
@@ -1820,10 +1826,10 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
             assertThat(studentResult.hasPassed).isNotNull();
 
             // Ensure that the exercise ids of the student exam are the same as the exercise ids in the students exercise results
-            List<Long> exerciseIdsOfStudentResult = studentResult.exerciseGroupIdToExerciseResult.values().stream().map(exerciseResult -> exerciseResult.exerciseId)
-                    .collect(Collectors.toList());
-            List<Long> exerciseIdsInStudentExam = studentExamOfUser.getExercises().stream().map(DomainObject::getId).collect(Collectors.toList());
-            assertThat(exerciseIdsOfStudentResult).containsExactlyInAnyOrderElementsOf(exerciseIdsInStudentExam);
+            Set<Long> exerciseIdsOfStudentResult = studentResult.exerciseGroupIdToExerciseResult.values().stream().map(exerciseResult -> exerciseResult.exerciseId)
+                    .collect(Collectors.toSet());
+            Set<Long> exerciseIdsInStudentExam = studentExamOfUser.getExercises().stream().map(DomainObject::getId).collect(Collectors.toSet());
+            assertThat(exerciseIdsOfStudentResult).isEqualTo(exerciseIdsInStudentExam);
             for (Map.Entry<Long, ExamScoresDTO.ExerciseResult> entry : studentResult.exerciseGroupIdToExerciseResult.entrySet()) {
                 var exerciseResult = entry.getValue();
 
@@ -1883,7 +1889,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testGetExamStatistics() throws Exception {
+    void testGetExamStatistics() throws Exception {
         ExamChecklistDTO actualStatistics = examService.getStatsForChecklist(exam1, true);
         ExamChecklistDTO returnedStatistics = request.get("/api/courses/" + exam1.getCourse().getId() + "/exams/" + exam1.getId() + "/statistics", HttpStatus.OK,
                 ExamChecklistDTO.class);
@@ -1902,7 +1908,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testLatestExamEndDate() throws Exception {
+    void testLatestExamEndDate() throws Exception {
         // Setup exam and user
         User user = userRepo.findOneByLogin("student1").get();
 
@@ -1935,7 +1941,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor6", roles = "INSTRUCTOR")
-    public void testCourseAndExamAccessForInstructors_notInstructorInCourse_forbidden() throws Exception {
+    void testCourseAndExamAccessForInstructors_notInstructorInCourse_forbidden() throws Exception {
         // Instructor6 is not instructor for the course
         // Update exam
         request.put("/api/courses/" + course1.getId() + "/exams", exam1, HttpStatus.FORBIDDEN);
@@ -1970,7 +1976,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testLatestIndividualEndDate_noStudentExams() {
+    void testLatestIndividualEndDate_noStudentExams() {
         final var now = now().truncatedTo(ChronoUnit.MINUTES);
         exam1.setStartDate(now.minusHours(2));
         exam1.setEndDate(now);
@@ -1981,7 +1987,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testGetAllIndividualExamEndDates() {
+    void testGetAllIndividualExamEndDates() {
         final var now = now().truncatedTo(ChronoUnit.MINUTES);
         exam1.setStartDate(now.minusHours(2));
         exam1.setEndDate(now);
@@ -2014,7 +2020,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testIsExamOver_GracePeriod() {
+    void testIsExamOver_GracePeriod() {
         final var now = now().truncatedTo(ChronoUnit.MINUTES);
         exam1.setStartDate(now.minusHours(2));
         exam1.setEndDate(now);
@@ -2026,7 +2032,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testIsUserRegisteredForExam() {
+    void testIsUserRegisteredForExam() {
         exam1.addRegisteredUser(users.get(0));
         final var exam = examRepository.save(exam1);
         final var isUserRegistered = examRegistrationService.isUserRegisteredForExam(exam.getId(), users.get(0).getId());
@@ -2037,13 +2043,13 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testRegisterInstructorToExam() throws Exception {
+    void testRegisterInstructorToExam() throws Exception {
         request.postWithoutLocation("/api/courses/" + course1.getId() + "/exams/" + exam1.getId() + "/students/instructor1", null, HttpStatus.FORBIDDEN, null);
     }
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testArchiveCourseWithExam() throws Exception {
+    void testArchiveCourseWithExam() throws Exception {
         Course course = database.createCourseWithExamAndExercises();
         course.setEndDate(now().minusMinutes(5));
         course = courseRepo.save(course);
@@ -2059,7 +2065,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testArchiveExamAsInstructor() throws Exception {
+    void testArchiveExamAsInstructor() throws Exception {
         var course = database.createCourseWithExamAndExercises();
         var exam = examRepository.findByCourseId(course.getId()).stream().findFirst().get();
 
@@ -2074,7 +2080,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testArchiveExamAsStudent_forbidden() throws Exception {
+    void testArchiveExamAsStudent_forbidden() throws Exception {
         Course course = database.addEmptyCourse();
         course.setEndDate(now().minusMinutes(5));
         course = courseRepo.save(course);
@@ -2087,7 +2093,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testArchiveExamBeforeEndDate_badRequest() throws Exception {
+    void testArchiveExamBeforeEndDate_badRequest() throws Exception {
         Course course = database.addEmptyCourse();
         course.setEndDate(now().plusMinutes(5));
         course = courseRepo.save(course);
@@ -2100,19 +2106,19 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testDownloadExamArchiveAsStudent_forbidden() throws Exception {
+    void testDownloadExamArchiveAsStudent_forbidden() throws Exception {
         request.get("/api/courses/" + 1 + "/exams/" + 1 + "/download-archive", HttpStatus.FORBIDDEN, String.class);
     }
 
     @Test
     @WithMockUser(username = "tutor1", roles = "TA")
-    public void testDownloadExamArchiveAsTutor_forbidden() throws Exception {
+    void testDownloadExamArchiveAsTutor_forbidden() throws Exception {
         request.get("/api/courses/" + 1 + "/exams/" + 1 + "/download-archive", HttpStatus.FORBIDDEN, String.class);
     }
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testDownloadExamArchiveAsInstructor_not_found() throws Exception {
+    void testDownloadExamArchiveAsInstructor_not_found() throws Exception {
         // Create an exam with no archive
         Course course = database.createCourse();
         course = courseRepo.save(course);
@@ -2129,7 +2135,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testDownloadExamArchiveAsInstructorNotInCourse_forbidden() throws Exception {
+    void testDownloadExamArchiveAsInstructorNotInCourse_forbidden() throws Exception {
         // Create an exam with no archive
         Course course = database.createCourse();
         course.setInstructorGroupName("some-group");
@@ -2141,7 +2147,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testDownloadExamArchiveAsInstructor() throws Exception {
+    void testDownloadExamArchiveAsInstructor() throws Exception {
         testArchiveExamAsInstructor();
 
         // Download the archive
@@ -2183,17 +2189,17 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testGetStatsForExamAssessmentDashboardOneCorrectionRound() throws Exception {
+    void testGetStatsForExamAssessmentDashboardOneCorrectionRound() throws Exception {
         testGetStatsForExamAssessmentDashboard(1);
     }
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testGetStatsForExamAssessmentDashboardTwoCorrectionRounds() throws Exception {
+    void testGetStatsForExamAssessmentDashboardTwoCorrectionRounds() throws Exception {
         testGetStatsForExamAssessmentDashboard(2);
     }
 
-    public void testGetStatsForExamAssessmentDashboard(int numberOfCorrectionRounds) throws Exception {
+    void testGetStatsForExamAssessmentDashboard(int numberOfCorrectionRounds) throws Exception {
         User examTutor1 = userRepo.findOneByLogin("tutor1").get();
         User examTutor2 = userRepo.findOneByLogin("tutor2").get();
 
@@ -2243,7 +2249,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
         // Fetch the created participations and assign them to the exercises
         int participationCounter = 0;
-        List<Exercise> exercisesInExam = exam.getExerciseGroups().stream().map(ExerciseGroup::getExercises).flatMap(Collection::stream).collect(Collectors.toList());
+        List<Exercise> exercisesInExam = exam.getExerciseGroups().stream().map(ExerciseGroup::getExercises).flatMap(Collection::stream).toList();
         for (var exercise : exercisesInExam) {
             List<StudentParticipation> participations = studentParticipationRepository.findByExerciseIdWithEagerLegalSubmissionsResult(exercise.getId());
             exercise.setStudentParticipations(new HashSet<>(participations));
@@ -2351,7 +2357,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
         }
     }
 
-    public void lockAndAssessForSecondCorrection(Exam exam, Course course, List<Exercise> exercisesInExam, int numberOfCorrectionRounds) throws Exception {
+    private void lockAndAssessForSecondCorrection(Exam exam, Course course, List<Exercise> exercisesInExam, int numberOfCorrectionRounds) throws Exception {
         // Lock all submissions
         User examInstructor = userRepo.findOneByLogin("instructor1").get();
         User examTutor2 = userRepo.findOneByLogin("tutor2").get();
@@ -2440,7 +2446,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testGenerateStudentExamsTemplateCombine() throws Exception {
+    void testGenerateStudentExamsTemplateCombine() throws Exception {
         Exam examWithProgramming = database.addExerciseGroupsAndExercisesToExam(exam1, true);
         doNothing().when(gitService).combineAllCommitsOfRepositoryIntoOne(any());
         // invoke generate student exams
@@ -2451,21 +2457,21 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testGetExamTitleAsInstructor() throws Exception {
+    void testGetExamTitleAsInstructor() throws Exception {
         // Only user and role matter, so we can re-use the logic
         testGetExamTitle();
     }
 
     @Test
     @WithMockUser(username = "tutor1", roles = "TA")
-    public void testGetExamTitleAsTeachingAssistant() throws Exception {
+    void testGetExamTitleAsTeachingAssistant() throws Exception {
         // Only user and role matter, so we can re-use the logic
         testGetExamTitle();
     }
 
     @Test
     @WithMockUser(username = "user1", roles = "USER")
-    public void testGetExamTitleAsUser() throws Exception {
+    void testGetExamTitleAsUser() throws Exception {
         // Only user and role matter, so we can re-use the logic
         testGetExamTitle();
     }
@@ -2484,13 +2490,13 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "user1", roles = "USER")
-    public void testGetExamTitleForNonExistingExam() throws Exception {
+    void testGetExamTitleForNonExistingExam() throws Exception {
         request.get("/api/exams/123124123123/title", HttpStatus.NOT_FOUND, String.class);
     }
 
     @Test
     @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
-    public void testUpdateExamMonitoringStatus() throws Exception {
+    void testUpdateExamMonitoringStatus() throws Exception {
         exam1.setMonitoring(true);
         request.putWithResponseBody("/api/courses/" + course1.getId() + "/exams", exam1, Exam.class, HttpStatus.OK);
 
@@ -2505,21 +2511,21 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
     // ExamRegistration Service - checkRegistrationOrRegisterStudentToTestExam
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testCheckRegistrationOrRegisterStudentToTestExam_noTestExam() {
+    void testCheckRegistrationOrRegisterStudentToTestExam_noTestExam() {
         assertThatThrownBy(() -> examRegistrationService.checkRegistrationOrRegisterStudentToTestExam(course1, exam1.getId(), database.getUserByLogin("student1")))
                 .isInstanceOf(AccessForbiddenException.class);
     }
 
     @Test
     @WithMockUser(username = "student42", roles = "USER")
-    public void testCheckRegistrationOrRegisterStudentToTestExam_studentNotPartOfCourse() {
+    void testCheckRegistrationOrRegisterStudentToTestExam_studentNotPartOfCourse() {
         assertThatThrownBy(() -> examRegistrationService.checkRegistrationOrRegisterStudentToTestExam(course1, exam1.getId(), database.getUserByLogin("student42")))
                 .isInstanceOf(AccessForbiddenException.class);
     }
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testCheckRegistrationOrRegisterStudentToTestExam_successfulRegistration() {
+    void testCheckRegistrationOrRegisterStudentToTestExam_successfulRegistration() {
         Exam testExam = ModelFactory.generateTestExam(course1);
         testExam.addRegisteredUser(users.get(0));
         testExam = examRepository.save(testExam);
@@ -2531,13 +2537,13 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
     // ExamResource - getStudentExamForTestExamForStart
     @Test
     @WithMockUser(username = "student42", roles = "USER")
-    public void testGetStudentExamForTestExamForStart_notRegisteredInCourse() throws Exception {
+    void testGetStudentExamForTestExamForStart_notRegisteredInCourse() throws Exception {
         request.get("/api/courses/" + course1.getId() + "/exams/" + testExam1.getId() + "/start", HttpStatus.FORBIDDEN, String.class);
     }
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testGetStudentExamForTestExamForStart_notVisible() throws Exception {
+    void testGetStudentExamForTestExamForStart_notVisible() throws Exception {
         testExam1.setVisibleDate(now().plusMinutes(60));
         testExam1 = examRepository.save(testExam1);
 
@@ -2546,7 +2552,7 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testGetStudentExamForTestExamForStart_ExamDoesNotBelongToCourse() throws Exception {
+    void testGetStudentExamForTestExamForStart_ExamDoesNotBelongToCourse() throws Exception {
         Exam testExam = database.addTestExam(course2);
 
         request.get("/api/courses/" + course1.getId() + "/exams/" + testExam.getId() + "/start", HttpStatus.CONFLICT, StudentExam.class);
@@ -2554,15 +2560,277 @@ public class ExamIntegrationTest extends AbstractSpringIntegrationBambooBitbucke
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testGetStudentExamForTestExamForStart_fetchExam() throws Exception {
+    void testGetStudentExamForTestExamForStart_fetchExam() throws Exception {
         StudentExam studentExamReceived = request.get("/api/courses/" + course1.getId() + "/exams/" + testExam1.getId() + "/start", HttpStatus.OK, StudentExam.class);
         assertEquals(studentExam1, studentExamReceived);
     }
 
     @Test
     @WithMockUser(username = "student1", roles = "USER")
-    public void testGetStudentExamForTestExamForStart_successful() throws Exception {
+    void testGetStudentExamForTestExamForStart_successful() throws Exception {
         request.get("/api/courses/" + course1.getId() + "/exams/" + testExam1.getId() + "/start", HttpStatus.OK, StudentExam.class);
     }
 
+    @Test
+    @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
+    public void testGetExamForImportWithExercises_successful() throws Exception {
+        Exam received = request.get("/api/exams/" + exam2.getId(), HttpStatus.OK, Exam.class);
+        assertEquals(exam2, received);
+    }
+
+    @Test
+    @WithMockUser(username = "instructor6", roles = "INSTRUCTOR")
+    public void testGetExamForImportWithExercises_noInstructorAccess() throws Exception {
+        request.get("/api/exams/" + exam2.getId(), HttpStatus.FORBIDDEN, Exam.class);
+    }
+
+    @Test
+    @WithMockUser(username = "tutor1", roles = "TUTOR")
+    public void testGetExamForImportWithExercises_noTutorAccess() throws Exception {
+        request.get("/api/exams/" + exam2.getId(), HttpStatus.FORBIDDEN, Exam.class);
+    }
+
+    @Test
+    @WithMockUser(username = "editor1", roles = "EDITOR")
+    public void testGetExamForImportWithExercises_noEditorAccess() throws Exception {
+        request.get("/api/exams/" + exam2.getId(), HttpStatus.FORBIDDEN, Exam.class);
+    }
+
+    @Test
+    @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
+    public void testGetAllExamsOnPage_WithoutExercises_instructor_successful() throws Exception {
+        final PageableSearchDTO<String> search = database.configureSearch("");
+        final var result = request.get("/api/exams", HttpStatus.OK, SearchResultPageDTO.class, database.searchMapping(search));
+        assertThat(result.getResultsOnPage()).hasSize(3);
+    }
+
+    @Test
+    @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
+    public void testGetAllExamsOnPage_WithExercises_instructor_successful() throws Exception {
+        final PageableSearchDTO<String> search = database.configureSearch("");
+        final var result = request.get("/api/exams?withExercises=true", HttpStatus.OK, SearchResultPageDTO.class, database.searchMapping(search));
+        assertThat(result.getResultsOnPage()).hasSize(1);
+    }
+
+    @Test
+    @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
+    public void testGetAllExamsOnPage_WithoutExercisesAndExamsNotLinkedToCourse_instructor_successful() throws Exception {
+        Course course3 = database.addEmptyCourse();
+        course3.setInstructorGroupName("non-instructors");
+        courseRepo.save(course3);
+        database.addExamWithExerciseGroup(course3, true);
+        final PageableSearchDTO<String> search = database.configureSearch("");
+        final var result = request.get("/api/exams", HttpStatus.OK, SearchResultPageDTO.class, database.searchMapping(search));
+        assertThat(result.getResultsOnPage()).hasSize(3);
+    }
+
+    @Test
+    @WithMockUser(username = "admin", roles = "ADMIN")
+    public void testGetAllExamsOnPage_WithoutExercisesAndExamsNotLinkedToCourse_admin_successful() throws Exception {
+        Course course3 = database.addEmptyCourse();
+        course3.setInstructorGroupName("non-instructors");
+        courseRepo.save(course3);
+        database.addExamWithExerciseGroup(course3, true);
+        final PageableSearchDTO<String> search = database.configureSearch("");
+        final var result = request.get("/api/exams", HttpStatus.OK, SearchResultPageDTO.class, database.searchMapping(search));
+        assertThat(result.getResultsOnPage()).hasSize(4);
+    }
+
+    @Test
+    @WithMockUser(username = "tutor1", roles = "TUTOR")
+    public void testGetAllExamsOnPage_tutor() throws Exception {
+        final PageableSearchDTO<String> search = database.configureSearch("");
+        request.get("/api/exams", HttpStatus.FORBIDDEN, SearchResultPageDTO.class, database.searchMapping(search));
+    }
+
+    @Test
+    @WithMockUser(username = "student1", roles = "USER")
+    public void testGetAllExamsOnPage_student() throws Exception {
+        final PageableSearchDTO<String> search = database.configureSearch("");
+        request.get("/api/exams", HttpStatus.FORBIDDEN, SearchResultPageDTO.class, database.searchMapping(search));
+    }
+
+    @Test
+    @WithMockUser(username = "student1", roles = "USER")
+    public void testImportExamWithExercises_student() throws Exception {
+        final Exam exam = new Exam();
+        request.postWithoutLocation("/api/courses/" + course1.getId() + "/exam-import", exam1, HttpStatus.FORBIDDEN, null);
+    }
+
+    @Test
+    @WithMockUser(username = "tutor1", roles = "TUTOR")
+    public void testImportExamWithExercises_tutor() throws Exception {
+        request.postWithoutLocation("/api/courses/" + course1.getId() + "/exam-import", exam1, HttpStatus.FORBIDDEN, null);
+    }
+
+    @Test
+    @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
+    public void testImportExamWithExercises_idExists() throws Exception {
+        final Exam exam = ModelFactory.generateExam(course1);
+        exam.setId(2L);
+        request.postWithoutLocation("/api/courses/" + course1.getId() + "/exam-import", exam, HttpStatus.BAD_REQUEST, null);
+    }
+
+    @Test
+    @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
+    public void testImportExamWithExercises_courseMismatch() throws Exception {
+        // No Course
+        final Exam examA = ModelFactory.generateExam(course1);
+        examA.setCourse(null);
+        request.postWithoutLocation("/api/courses/" + course1.getId() + "/exam-import", examA, HttpStatus.BAD_REQUEST, null);
+
+        // Exam Course and REST-Course mismatch
+        final Exam examB = ModelFactory.generateExam(course1);
+        examB.setCourse(course2);
+        request.postWithoutLocation("/api/courses/" + course1.getId() + "/exam-import", examB, HttpStatus.BAD_REQUEST, null);
+    }
+
+    @Test
+    @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
+    public void testImportExamWithExercises_dateConflict() throws Exception {
+        // Visible Date after Started Date
+        final Exam examA = ModelFactory.generateExam(course1);
+        examA.setVisibleDate(ZonedDateTime.now().plusHours(2));
+        request.postWithoutLocation("/api/courses/" + course1.getId() + "/exam-import", examA, HttpStatus.BAD_REQUEST, null);
+
+        // Visible Date missing
+        final Exam examB = ModelFactory.generateExam(course1);
+        examB.setVisibleDate(null);
+        request.postWithoutLocation("/api/courses/" + course1.getId() + "/exam-import", examB, HttpStatus.BAD_REQUEST, null);
+
+        // Started Date after End Date
+        final Exam examC = ModelFactory.generateExam(course1);
+        examC.setStartDate(ZonedDateTime.now().plusHours(2));
+        request.postWithoutLocation("/api/courses/" + course1.getId() + "/exam-import", examC, HttpStatus.BAD_REQUEST, null);
+
+        // Started Date missing
+        final Exam examD = ModelFactory.generateExam(course1);
+        examD.setStartDate(null);
+        request.postWithoutLocation("/api/courses/" + course1.getId() + "/exam-import", examD, HttpStatus.BAD_REQUEST, null);
+    }
+
+    @Test
+    @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
+    public void testImportExamWithExercises_dateConflictTestExam() throws Exception {
+        // Working Time larger than Working window
+        final Exam examA = ModelFactory.generateTestExam(course1);
+        examA.setWorkingTime(3 * 60 * 60);
+        request.postWithoutLocation("/api/courses/" + course1.getId() + "/exam-import", examA, HttpStatus.BAD_REQUEST, null);
+
+        // Working Time larger than Working window
+        final Exam examB = ModelFactory.generateTestExam(course1);
+        examB.setWorkingTime(0);
+        request.postWithoutLocation("/api/courses/" + course1.getId() + "/exam-import", examB, HttpStatus.BAD_REQUEST, null);
+    }
+
+    @Test
+    @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
+    public void testImportExamWithExercises_pointConflict() throws Exception {
+        final Exam examA = ModelFactory.generateExam(course1);
+        examA.setMaxPoints(-5);
+        request.postWithoutLocation("/api/courses/" + course1.getId() + "/exam-import", examA, HttpStatus.BAD_REQUEST, null);
+    }
+
+    @Test
+    @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
+    public void testImportExamWithExercises_correctionRoundConflict() throws Exception {
+        // Correction round <= 0
+        final Exam examA = ModelFactory.generateExam(course1);
+        examA.setNumberOfCorrectionRoundsInExam(0);
+        request.postWithoutLocation("/api/courses/" + course1.getId() + "/exam-import", examA, HttpStatus.BAD_REQUEST, null);
+
+        // Correction round >= 2
+        final Exam examB = ModelFactory.generateExam(course1);
+        examB.setNumberOfCorrectionRoundsInExam(3);
+        request.postWithoutLocation("/api/courses/" + course1.getId() + "/exam-import", examB, HttpStatus.BAD_REQUEST, null);
+
+        // Correction round != 0 for test exam
+        final Exam examC = ModelFactory.generateTestExam(course1);
+        examC.setNumberOfCorrectionRoundsInExam(1);
+        request.postWithoutLocation("/api/courses/" + course1.getId() + "/exam-import", examC, HttpStatus.BAD_REQUEST, null);
+    }
+
+    @Test
+    @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
+    public void testImportExamWithExercises_successfulWithoutExercises() throws Exception {
+        Exam exam = database.addExam(course1);
+        exam.setId(null);
+
+        final Exam received = request.postWithResponseBody("/api/courses/" + course1.getId() + "/exam-import", exam, Exam.class, HttpStatus.CREATED);
+        assertThat(received.getId()).isNotNull();
+        assertThat(received.getTitle()).isEqualTo(exam.getTitle());
+        assertThat(received.isTestExam()).isFalse();
+        assertThat(received.getWorkingTime()).isEqualTo(3000);
+        assertThat(received.getStartText()).isEqualTo("Start Text");
+        assertThat(received.getEndText()).isEqualTo("End Text");
+        assertThat(received.getConfirmationStartText()).isEqualTo("Confirmation Start Text");
+        assertThat(received.getConfirmationEndText()).isEqualTo("Confirmation End Text");
+        assertThat(received.getMaxPoints()).isEqualTo(90);
+        assertThat(received.getNumberOfExercisesInExam()).isEqualTo(1);
+        assertThat(received.getRandomizeExerciseOrder()).isFalse();
+        assertThat(received.getNumberOfCorrectionRoundsInExam()).isEqualTo(1);
+        assertThat(received.getCourse().getId()).isEqualTo(course1.getId());
+
+        exam.setVisibleDate(ZonedDateTime.ofInstant(exam.getVisibleDate().truncatedTo(ChronoUnit.MILLIS).toInstant(), ZoneId.of("UTC")));
+        received.setVisibleDate(ZonedDateTime.ofInstant(received.getVisibleDate().truncatedTo(ChronoUnit.MILLIS).toInstant(), ZoneId.of("UTC")));
+        assertThat(received.getVisibleDate()).isEqualTo(exam.getVisibleDate());
+        exam.setStartDate(ZonedDateTime.ofInstant(exam.getStartDate().truncatedTo(ChronoUnit.MILLIS).toInstant(), ZoneId.of("UTC")));
+        received.setStartDate(ZonedDateTime.ofInstant(received.getStartDate().truncatedTo(ChronoUnit.MILLIS).toInstant(), ZoneId.of("UTC")));
+        assertThat(received.getStartDate()).isEqualTo(exam.getStartDate());
+        exam.setEndDate(ZonedDateTime.ofInstant(exam.getEndDate().truncatedTo(ChronoUnit.MILLIS).toInstant(), ZoneId.of("UTC")));
+        received.setEndDate(ZonedDateTime.ofInstant(received.getEndDate().truncatedTo(ChronoUnit.MILLIS).toInstant(), ZoneId.of("UTC")));
+        assertThat(received.getEndDate()).isEqualTo(exam.getEndDate());
+    }
+
+    @Test
+    @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
+    public void testImportExamWithExercises_successfulWithExercises() throws Exception {
+        Exam exam = database.addExamWithModellingAndTextAndFileUploadAndQuizAndEmptyGroup(course1);
+        exam.setId(null);
+
+        final Exam received = request.postWithResponseBody("/api/courses/" + course1.getId() + "/exam-import", exam, Exam.class, HttpStatus.CREATED);
+        assertThat(received.getId()).isNotNull();
+        assertThat(received.getTitle()).isEqualTo(exam.getTitle());
+        assertThat(received.getCourse()).isEqualTo(course1);
+        assertThat(received.getCourse()).isEqualTo(exam.getCourse());
+        assertThat(received.getExerciseGroups().size()).isEqualTo(4);
+    }
+
+    @Test
+    @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
+    public void testImportExamWithExercises_successfulWithImportToOtherCourse() throws Exception {
+        Exam exam = database.addExamWithModellingAndTextAndFileUploadAndQuizAndEmptyGroup(course2);
+        exam.setCourse(course1);
+        exam.setId(null);
+
+        final Exam received = request.postWithResponseBody("/api/courses/" + course1.getId() + "/exam-import", exam, Exam.class, HttpStatus.CREATED);
+        assertThat(received.getExerciseGroups().size()).isEqualTo(4);
+
+        for (int i = 0; i <= 3; i++) {
+            Exercise expected = exam.getExerciseGroups().get(i).getExercises().stream().findFirst().get();
+            Exercise exerciseReceived = received.getExerciseGroups().get(i).getExercises().stream().findFirst().get();
+            assertThat(exerciseReceived.getExerciseGroup()).isNotEqualTo(expected.getExerciseGroup());
+            assertThat(exerciseReceived.getTitle()).isEqualTo(expected.getTitle());
+            assertThat(exerciseReceived.getId()).isNotEqualTo(expected.getId());
+        }
+    }
+
+    @Test
+    @WithMockUser(username = "instructor1", roles = "INSTRUCTOR")
+    public void testImportExamWithExercises_preCheckFailed() throws Exception {
+        Exam exam = ModelFactory.generateExam(course1);
+        ExerciseGroup programmingGroup = ModelFactory.generateExerciseGroup(false, exam);
+        exam = examRepository.save(exam);
+        exam.setId(null);
+        ProgrammingExercise programming = ModelFactory.generateProgrammingExerciseForExam(programmingGroup, ProgrammingLanguage.JAVA);
+        programmingGroup.addExercise(programming);
+        exerciseRepo.save(programming);
+
+        doReturn(true).when(versionControlService).checkIfProjectExists(any(), any());
+        doReturn(null).when(continuousIntegrationService).checkIfProjectExists(any(), any());
+
+        request.getMvc().perform(post("/api/courses/" + course1.getId() + "/exam-import").contentType(MediaType.APPLICATION_JSON).content(objectMapper.writeValueAsString(exam)))
+                .andExpect(status().isBadRequest())
+                .andExpect(result -> assertThat(result.getResolvedException().getMessage()).isEqualTo("Exam contains programming exercise(s) with invalid short name."));
+    }
 }
